examples/test/testpolicy15298.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15298
  namespace: namespace367
spec:
  podSelector:
    matchLabels:
      key24: value42
      key16: value24
      key5: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value18
          key19: value39
          key29: value48
      podSelector:
        matchLabels:
          key19: value23
          key48: value35
